# Lab2

./: .gitignore  CMakeLists.txt
src/: DataTypes.h  DataTypes.hpp  Deque.h  Deque.hpp  DynamicArray.h  DynamicArray.hpp  DynamicArraySequence.hpp  Example.hpp  Exception.h  Function.hpp  Function.hpp.autosave  Interface.h  Interface.hpp  LinkedList.h  LinkedList.hpp  Main.cpp  RandomGen.hpp  Sequence.h  Sequence.hpp  Tests.hpp
src/Examples/: Example.hpp  Example.hpp.autosave
src/Interface/: Interface.hpp  Interface.hpp.autosave  Manual.hpp
src/Main/: Example.hpp  Interface.hpp  Main.cpp  Manual.hpp
src/Structures/: Deque.hpp  DynamicArray.hpp  LInkedListSequence.hpp  LinkedList.hpp
src/Structures/Basic/: DynamicArray.hpp  LinkedList.hpp
src/Structures/Result/: Deque.hpp
src/Structures/Sequences/: DynamicArraySequence.hpp  LInkedListSequence.hpp  Sequence.hpp
src/Tests/Basic/: Check.h  RandomTestFunctions.hpp  Test.hpp  TestEngine.hpp  TestFunctions.hpp
src/Tests/Main/: TestMain.hpp
src/Tests/Tests/: TestsArray.hpp  TestsDeque.hpp  TestsList.hpp  TestsSequence.hpp
src/Utility/: DataTypes.hpp  Exception.hpp  RandomGen.hpp
src/Utility/DataTypes/: Complex.hpp
src/Utility/Exceptions/: Exception.hpp
src/Utility/Randomization/: RandomGen.hpp
src/Utility/UtilityFunctions/: Functions.hpp
